# wincnn

./: .gitignore  CHANGELOG.md  CITATION.cff  FAQ.md  README.md  pyproject.toml  wincnn.py
.github/workflows/: ci.yml
tests/: test_wincnn.py
