[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wincnn"
version = "2.0.0"
description = "Compute minimal Winograd convolution algorithms for convolutional neural networks"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["sympy>=1.9"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["wincnn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
